Launchers upgrade